--- a/index.html
+++ b/index.html
@@ -5,13 +5,40 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ez Travel</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="responsive.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Poppins:wght@500&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
   <header>
-    <h1>Hello world</h1>
+    <nav class="navbar-container">
+      <input type="checkbox" id="check">
+      <label for="check" class="check-btn"><i class="fa-solid fa-bars"></i>
+      </label>
+      <div class="nav-details">
+        <div class="nav-left">
+          <img style="width: 58px;" src="Images/Group 40071 (2).png" alt="">
+          <h2 style="margin-left: 16px;">Ez <span class="primary-text-color">Travel</span></h2>
+        </div>
+        <div class="nav-right">
+          <ul>
+            <li><a class="Home-anchor" href=""><span class="primary-text-color">Home</span></a></li>
+            <li><a href="">Packages</a></li>
+            <li><a href="">Testimonial</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   </header>
   <main></main>
   <footer></footer>
