banner site and responsive done

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <body>
   <header>
+    <!-- nav portion -->
     <nav class="navbar-container">
       <input type="checkbox" id="check">
       <label for="check" class="check-btn"><i class="fa-solid fa-bars"></i>
@@ -30,7 +31,8 @@
         </div>
         <div class="nav-right">
           <ul>
-            <li><a class="Home-anchor" href=""><span class="primary-text-color">Home</span></a></li>
+            <li><a class="Home-anchor" href=""><span style="font-weight: 700;"
+                  class="primary-text-color">Home</span></a></li>
             <li><a href="">Packages</a></li>
             <li><a href="">Testimonial</a></li>
             <li><a href="">Blog</a></li>
@@ -39,6 +41,25 @@
         </div>
       </div>
     </nav>
+    <!-- banner portion  -->
+    <section class="banner">
+      <div class="banner-details">
+        <h1>Explore Your Travel</h1>
+        <p>To travel is to quench a thirst for the unknown. <br> It's a chance to wander cobbled streets in ancient
+          cities,
+          marvel at breathtaking landscapes, and savor unfamiliar flavors.</p>
+        <div class="banner-search-option">
+          <input type="text" placeholder="Where go">
+          <select name="choice">
+            <option value="Destination">When
+          </select>
+          <select name="choice">
+            <option value="Destination">Select Type
+          </select>
+          <button class="primary-button"><i class="fa-solid fa-magnifying-glass"></i>Find now</button>
+        </div>
+      </div>
+    </section>
   </header>
   <main></main>
   <footer></footer>
