--- a/index.html
+++ b/index.html
@@ -61,7 +61,35 @@
       </div>
     </section>
   </header>
-  <main></main>
+  <main>
+    <section class="popular-tour-container">
+      <div class="tour-details">
+        <h2>Our Popular Tours</h2>
+        <p>
+          Immerse yourself in the Eternal City's rich history on a captivating walking tour. Journey through cobbled
+          streets, past ancient landmarks like the Colosseum and Trevi Fountain, and discover hidden gems known only to
+          locals.</p>
+
+        <ul>
+          <li>Your expert guide will bring the past to life with captivating stories of emperors</li>
+          <li>gladiators and everyday Roman life</li>
+          <li>This tour is perfect for history buffs and anyone who wants to experience the magic of Rome firsthand
+          </li>
+        </ul>
+
+        <p>
+          Immerse yourself in the Eternal City's rich history on a captivating walking tour. Journey through cobbled
+          streets, past ancient landmarks like the Colosseum and Trevi Fountain, and discover hidden gems known only to
+          locals.
+        </p>
+        <button class="primary-button">Read More</button>
+      </div>
+      <div>
+        <img src="Images/Rectangle 4.png" alt="">
+      </div>
+    </section>
+
+  </main>
   <footer></footer>
 </body>
 
