destination collage done with responsive

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     </section>
   </header>
   <main>
+    <!-- Tour portion  -->
     <section class="popular-tour-container">
       <div class="tour-details">
         <h2>Our Popular Tours</h2>
@@ -88,7 +89,60 @@
         <img src="Images/Rectangle 4.png" alt="">
       </div>
     </section>
+    <!-- destination portion  -->
+    <section class="destination-container">
+      <h2 class="destination-title">Choose Your Destination</h2>
+      <p class="destination-details">Thrill-seekers can embark on heart-pounding hikes, conquer challenging mountain
+        bike <br> trails, or paraglide over
+        breathtaking landscapes</p>
+    </section>
+    <!-- destination image collage  -->
+    <section class="image-collage-container">
+      <div class="first-row-image">
+        <div class="first-image">
+          <div class="overlay">
+            <h3>Maldives</h3>
+          </div>
+        </div>
+        <div class="second-image">
+          <div class="overlay">
+            <h3>Indonesia</h3>
+          </div>
+        </div>
 
+      </div>
+      <div class="second-row-image">
+        <div class="third-image">
+          <div class="overlay">
+            <h3>Srilanka</h3>
+          </div>
+        </div>
+        <div class="fourth-image">
+          <div class="overlay">
+            <h3>North America</h3>
+          </div>
+        </div>
+        <div class="fifth-image">
+          <div class="overlay">
+            <h3>Kashmir</h3>
+          </div>
+        </div>
+
+      </div>
+      <div class="third-row-image">
+        <div class="sixth-image">
+          <div class="overlay">
+            <h3>Bangladesh</h3>
+          </div>
+        </div>
+        <div class="seventh-image">
+          <div class="overlay">
+            <h3>Banderban</h3>
+          </div>
+        </div>
+
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
