--- a/index.html
+++ b/index.html
@@ -143,6 +143,42 @@
 
       </div>
     </section>
+    <section class="choose-us">
+      <h1>Why Choose Us</h1>
+      <p>Thrill-seekers can embark on heart-pounding hikes, conquer challenging mountain
+        bike <br> trails, or paraglide over
+        breathtaking landscapes</p>
+    </section>
+
+    <!-- Hotel card portion  -->
+    <section class="hotel-card-container">
+      <div class="first-card-row">
+        <div class="first-card">
+          <img src="Images/Group 40071 (2).png" alt="">
+          <h3>Handpicked Hotels</h3>
+          <p>Thrill-seekers can embark on heart-pounding hikes, conquer challenging mountain
+            bike <br> trails, or paraglide over
+            breathtaking landscapes</p>
+        </div>
+        <div class="second-card">
+          <img src="Images/Group 40071 (2).png" alt="">
+          <h3>World Class Service</h3>
+          <p>Thrill-seekers can embark on heart-pounding hikes, conquer challenging mountain
+            bike <br> trails, or paraglide over
+            breathtaking landscapes</p>
+        </div>
+      </div>
+      <div class="second-card-row">
+        <div class="third-card">
+          <img src="Images/Group 40071 (2).png" alt="">
+          <h3>Best Price Guarantee</h3>
+          <p>Thrill-seekers can embark on heart-pounding hikes, conquer challenging mountain
+            bike <br> trails, or paraglide over
+            breathtaking landscapes</p>
+        </div>
+
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
