--- a/index.html
+++ b/index.html
@@ -179,6 +179,29 @@
 
       </div>
     </section>
+    <section class="destination-container">
+      <h2 class="destination-title">Deals & Discounts</h2>
+      <p class="destination-details">Thrill-seekers can embark on heart-pounding hikes, conquer challenging mountain
+        bike <br> trails, or paraglide over
+        breathtaking landscapes</p>
+    </section>
+    <section class="Newsletter-container">
+      <div class="newsletter-content">
+        <div class="news-left-content">
+          <h3>Newsletter</h3>
+          <p>Get your daily dose of travel news & tips. <br> Sign up today!</p>
+          <hr>
+          <input type="text" name="" id="" placeholder="Enter your name">
+          <input type="email" name="" id="" placeholder="Enter your email">
+          <button style="width: 100%;" class="primary-button">Subscribe</button>
+        </div>
+        <div class="news-right-content">
+          <img src="Images/Rectangle 8 (1).png" alt="">
+          <button class="primary-button">Travel.com <br> <span style="font-weight: 800; font-size: 25px;  ;">Save up to
+              70%</span> </button>
+        </div>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
