--- a/index.html
+++ b/index.html
@@ -203,7 +203,23 @@
       </div>
     </section>
   </main>
-  <footer></footer>
+  <footer>
+    <div class="footer-container">
+      <div class="footer-content">
+        <img src="Images/Group 40071 (2).png" alt="">
+        <h3>Ez <span class="primary-text-color">Travel</span></h3>
+      </div>
+      <p class="footer-line">Thrill-seekers can embark on heart-pounding hikes, conquer challenging mountain
+        bike <br> trails, or paraglide over
+        breathtaking landscapes</p>
+      <div class="social-media-icons">
+        <span><i class="fa-brands fa-twitter"></i></span><span><i class="fa-brands fa-facebook"></i></span><span><i
+            class="fa-brands fa-instagram"></i></span><span><i class="fa-brands fa-github"></i></span>
+      </div>
+      <hr style="background: rgba(19, 19, 24, 0.10); height: 3px; width: 60%;">
+      <p class="footer-last-line">2017, All Rights Reserved.</p>
+    </div>
+  </footer>
 </body>
 
 </html>
